# Cluster

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-release.yml
controller/: mqtt_rule  requirements.txt
controller/src/: UI.py  audio_player.py  config.py  embedded_broker.py  event_bus.py  game_manager.py  main.py  mqtt_client.py  node_manager.py
controller/src/resources/: gameRules.md
controller/test/: send_test_message.py
mcu/src/DET_node/: README.md  platformio.ini
mcu/src/DET_node/lib/: MatrixKeypad.h
mcu/src/DET_node/src/: main.cpp
mcu/src/STA_node/: platformio.ini
mcu/src/STA_node/src/: main.cpp
