[project]
name = "Cluster"
version = "0.9.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomqtt>=2.3.0",
    "amqtt>=0.11.0",
    "pyside6>=6.7.0",
    "qasync>=0.27.1",
]

[project.scripts]
controller = "controller.src.main:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["controller"]
